--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,6 +36,6 @@ jobs:
         image: haphong2134/springboot-images-new
         tags: latest
         registry: docker.io
-        dockerfile: github-cicd-actions/Dockerfile
+        dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
